--- a/client/src/assets/styles/components/_utilities.scss
+++ b/client/src/assets/styles/components/_utilities.scss
@@ -105,6 +105,11 @@
   height: 16px;
 }
 
+.icon-md {
+  width: 20px;
+  height: 20px;
+}
+
 .m-0 {
   margin: 0;
 }
@@ -169,6 +174,14 @@
   
   @media (min-width: 768px) {
     display: inline;
+  }
+}
+
+.show-mobile-only {
+  display: inline;
+  
+  @media (min-width: 768px) {
+    display: none;
   }
 }
 
